--- a/views/studentViewBatches.ejs
+++ b/views/studentViewBatches.ejs
@@ -60,38 +60,50 @@
       
     </header>
 
-    <div class="intro-section" id="home-section">
-      
-      <div class="slide-1" style="background-image: url('images/hero_1.jpg');" data-stellar-background-ratio="0.5">
-        <div class="container">
-          <div class="row align-items-center" >
-            <div class="col-12" style=" margin-top: -100px;">
-              <div class="row align-items-center">
-                <div class="col-lg-6 mb-4">
-                  <h3  data-aos="fade-up" data-aos-delay="100" class="text-white">EduSphere | view Batches</h3>
-                  <p class="mb-4"  data-aos="fade-up" data-aos-delay="200">
-                  Welcome <%=email%>  
-                  </p>
-                  <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary py-3 px-5">
-                    <%if(allocatedBatchData.length==0){%>
-                        No Record Found    
-                    <%}%>
-                  </a>
-                  <br><br>
-                    <span class="text-primary" style="color:crimson" data-aos="fade-up" data-aos-delay="300">
-                    <%=message%>
-                  </span>
-                  </p>
-                </div>
-
-                <!-- <div class="col-lg-6 mb-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-                    <img src="images/try.png" alt="Image" class="img-fluid">
-                  </div> -->
-
-              </div>
-            </div>
-            
+   
+    <div class="site-section overlay" style=" margin-top: -1px;">
+     
+      <div class="container" style="padding-top: 70px;">
+        <div class="row mb-5 justify-content-center">
+          <div class="col-lg-7 text-center" data-aos="fade-up" data-aos-delay="">
+            <h4 class="text-black mb-4">My Batches</h4>
+            <span><%=message%></span>
           </div>
+        </div>
+
+        <style>
+          #intQ:hover{
+            transition: 1s;
+            transform: scale(1);
+          }
+        </style>
+        
+        <div class="row" style="margin-top: -50px;" data-aos="fade-up" data-aos-delay="">
+          <%if(allocatedBatchData.length==0){%>
+            No Record Found
+          <%}else{%>
+            <%allocatedBatchData.forEach((obj)=>{%> 
+            <div id="intQ" class="col-md-5 col-lg-5" style="margin:4%;border-radius:10px;box-shadow: 1px 1px 10px 1px; padding: 10px;">
+              
+                <span class="text-black">
+                  <strong class="text-primary">Batch Id : </strong><%=obj.batchId%><br>
+                  <strong class="text-primary">Course Name : </strong><%=obj.courseName%><br>
+                  <strong class="text-primary">Trainer Name : </strong><%=obj.trainerName%><br>
+                  <strong class="text-primary">Enroll Id : </strong><%=obj.enrollId%><br>
+                  <strong class="text-primary">Name : </strong><%=obj.name%><br>
+                  <strong class="text-primary">Email : </strong><%=obj.email%><br>
+                  <strong class="text-primary">Start Date : </strong><%=new Date(obj.startDate).toISOString().split("T")[0]%><br>
+                  <strong class="text-primary">Start Time : </strong><%=obj.startTime%><br>
+                  <strong class="text-primary">End Time : </strong><%=obj.endTime%><br>
+                  <strong class="text-primary">Batch Duration : </strong><%=obj.batchDuration%><br>
+                </span>
+                <form action="/student/studentViewAssignments" method="post">
+                  <input type="hidden" name="batchId" id="batchId" value="<%=obj.batchId%>">
+                  <button class="btn btn-primary btn-block">View Assignments</button>
+                </form>
+              </div>
+            <%})%>
+          <%}%>
         </div>
       </div>
     </div>
